# ubitofu

./: .gitignore  .gitleaks.toml  .woodpecker.yml  CHANGELOG.md  README.md  pyproject.toml
.claude/skills/unifi-tofu-reconcile-workflow/: SKILL.md
.github/workflows/: ci.yml  controller-tests.yml  release.yml
.woodpecker/: controller.yml
assets/: README.md
ci/: install-tofu.sh  mutation_gate.py
docs/: provider-import-bugs.md
docs/superpowers/plans/: 2026-07-10-coverage-audit.md  2026-07-19-container-controller-testing.md
docs/superpowers/specs/: 2026-07-10-coverage-audit-design.md  2026-07-19-container-controller-testing-design-review.md  2026-07-19-container-controller-testing-design.md
src/ubitofu/: __init__.py  __main__.py  cli.py  config.py  controller.py  coverage.py  enumerator.py  hcl_surgeon.py  import_emitter.py  manifest.py  pipeline.py  reporter.py  secrets.py
src/unifi_tofu_import/: __init__.py  cleaner.py  cli.py  config.py  controller.py  enumerator.py  hcl_writer.py  import_emitter.py  manifest.py  pipeline.py  reporter.py  secrets.py  tofu_runner.py
tests/: __init__.py  conftest.py  test_cleaner.py  test_cli.py  test_config.py  test_controller.py  test_coverage.py  test_enumerator.py  test_fixtures_reconcile.py  test_hcl_surgeon.py  test_hcl_writer.py  test_identity.py  test_import_emitter.py  test_infra_deps.py  test_integration.py  test_manifest.py  test_pipeline.py  test_properties.py  test_reconcile.py  test_reporter.py  test_secrets.py  test_tofu_runner.py
tests/controllertest/: conftest.py  pins.py  readiness.py  sandbox.py  scenario.py  seeder.py  support.py  test_pins.py  test_readiness.py  test_sandbox.py  test_scenarios_cli.py  test_scenarios_devices.py  test_scenarios_reconcile.py  test_scenarios_uos.py  test_seeder.py  test_smoke.py  test_support.py  test_uos.py  uos.py
tests/fixtures/: .gitkeep  account.json  bgp.json  config.toml  ddns.json  firewall-policies.json  fw_app.json  nat.json  networkconf.json  radius.json  schema.json  sdns.json  show_planned.json  state.json  ug.json  user.json  wg_net.json  wg_users.json
tests/fixtures/coverage/: providers_schema.json  settings_live.json
tests/fixtures/golden/: e2e_expected.tf  network_nested.tf
tests/fixtures/reconcile/: README.md  after.tf  before.tf  committed.tf  controller_devices.json  plan_new_secret.json  plan_orphan.json  plan_two_same_name.json
