[project]
name = "ubitofu"
version = "0.6.1"
description = "Import a live UniFi / Ubiquiti UDM controller into OpenTofu (Terraform) — enumerate the controller and generate clean, appliable HCL for the ubiquiti-community/unifi provider. Plan-only, re-runnable."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{name = "James Braid"}]
requires-python = ">=3.11"
keywords = ["unifi", "ubiquiti", "udm", "unifi-controller", "opentofu", "terraform", "terraform-import", "iac", "infrastructure-as-code", "hcl", "network-automation"]
dependencies = ["python-hcl2>=8", "httpx>=0.27", "deepdiff>=8"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Intended Audience :: System Administrators",
    "Environment :: Console",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "hypothesis>=6", "pytest-cov>=5", "mutmut>=3.6"]

[project.urls]
Homepage = "https://github.com/jamesbraid/ubitofu"
Source = "https://github.com/jamesbraid/ubitofu"
Issues = "https://github.com/jamesbraid/ubitofu/issues"

[project.scripts]
ubitofu = "ubitofu.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["ubitofu"]
strict = true

[tool.coverage.run]
source = ["ubitofu"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mutmut]
source_paths = ["src/ubitofu/"]
only_mutate = [
    "src/ubitofu/pipeline.py",
    "src/ubitofu/enumerator.py",
    "src/ubitofu/import_emitter.py",
    "src/ubitofu/hcl_surgeon.py",
]
pytest_add_cli_args = ["--hypothesis-profile=mutation"]
mutate_only_covered_lines = true
max_stack_depth = 8
